src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Gift</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Pledged</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Recurring</fullName>
        </values>
        <values>
            <fullName>Won%2C Not Thanked</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Grant</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>LOI Submitted</fullName>
        </values>
        <values>
            <fullName>Pledged</fullName>
        </values>
        <values>
            <fullName>Proposal Submitted</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Won%2C Not Thanked</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Amount_Requested__c</fullName>
        <label>Amount Requested</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anonymous__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anonymous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CR_Contact_Id__c</fullName>
        <inlineHelpText>Field used by code that creates new opportunities</inlineHelpText>
        <label>CR Contact Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CR_Contact_Role__c</fullName>
        <inlineHelpText>Field used by code that creates new opportunities</inlineHelpText>
        <label>CR Contact Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CR_HHroles__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Field used by code that creates new opportunities</inlineHelpText>
        <label>CR HHRoles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_Date__c</fullName>
        <label>Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Number__c</fullName>
        <label>Check Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CombinedRollupFieldset__c</fullName>
        <description>Concatenated fields used during rollups to locate the most recent opportunity.</description>
        <formula>TEXT(CloseDate) + &apos;;|;&apos;+ TEXT(Amount) + &apos;;|;&apos;+ TEXT(Member_Level__c) + &apos;;|;&apos; + TEXT(Membership_Origin__c) + &apos;;|;&apos; + Id</formula>
        <inlineHelpText>Concatenated fields used during rollups to locate the most recent opportunity.</inlineHelpText>
        <label>Combined Rollup Fieldset</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The primary contact for this opportunity. Indicates a hard credit (i.e. the opportunity is attributable to this contact)</description>
        <inlineHelpText>Indicates who this Opportunity is from.  If the Opp is from a person, enter a Contact Name.  If the Opp is from an org or business, enter an Organization Name.  You cannot enter both.</inlineHelpText>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Contact Name)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deductible_Amount__c</fullName>
        <formula>IF ( 
 OR ( NOT( $RecordType.Name = &quot;Purchase&quot; ), NOT ( $RecordType.Name = &quot;TBD&quot; ) ) ,
  Amount  -  Non_Deductible_Amount__c  ,
  0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deductible Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Donation_Id__c</fullName>
        <label>Donation Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donation_Type__c</fullName>
        <label>Donation Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <label>Fund</label>
        <picklist>
            <picklistValues>
                <fullName>General Fund</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grant_Contract_Date__c</fullName>
        <label>Grant Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Number__c</fullName>
        <label>Grant Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Period_End_Date__c</fullName>
        <label>Grant Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Period_Start_Date__c</fullName>
        <label>Grant Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Request_Date__c</fullName>
        <label>Grant Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LOI_Sent_Date__c</fullName>
        <inlineHelpText>date Letter of Intent (or equiv.) was sent</inlineHelpText>
        <label>Grant LOI Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Matching_Gift__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Matching Gift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Level__c</fullName>
        <label>Member Level</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Membership_End_Date__c</fullName>
        <inlineHelpText>Date membership period ends.</inlineHelpText>
        <label>Membership End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Origin__c</fullName>
        <inlineHelpText>Is this a renewal, a new membership, or a membership with someone who lapsed and has returned.</inlineHelpText>
        <label>Membership Origin</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reacquire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Membership_Start_Date__c</fullName>
        <inlineHelpText>Date when membership period starts</inlineHelpText>
        <label>Membership Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Payment_Due_Date__c</fullName>
        <inlineHelpText>The date the next installment payment is due.  This field will be blank if not paying in installments.</inlineHelpText>
        <label>Next Installment Due Date</label>
        <summarizedField>OppPayment__c.Date__c</summarizedField>
        <summaryFilterItems>
            <field>OppPayment__c.IsInstallment__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OppPayment__c.Paid__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OppPayment__c.Written_Off__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>OppPayment__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Non_Deductible_Amount__c</fullName>
        <inlineHelpText>The portion of the opportunity amount that is not tax-deductible (fee for service or product, etc.)  Leave blank, or set to $0, if the opp is fully deductible.</inlineHelpText>
        <label>Non-Deductible Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planned_Gift__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Planned Gift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recurring_Payment_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurring Payment Profile</label>
        <referenceTo>Recurring_Payment_Profile__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Restriction__c</fullName>
        <label>Restriction</label>
        <picklist>
            <picklistValues>
                <fullName>Unrestricted</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Paid__c</fullName>
        <label>Total Paid</label>
        <summarizedField>OppPayment__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>OppPayment__c.Paid__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OppPayment__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Unpaid__c</fullName>
        <formula>IF ( Amount - Total_Paid__c &lt; 0 , 0 , Amount - Total_Paid__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Unpaid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>All_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Gifts_Closed_Lost</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Gift</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Lost</value>
        </filters>
        <label>Gifts - Closed Lost</label>
    </listViews>
    <listViews>
        <fullName>Gifts_Closed_Won</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Gift</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </filters>
        <label>Gifts - Closed Won</label>
    </listViews>
    <listViews>
        <fullName>Gifts_Needing_Thank_Yous</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Gift</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>&quot;Won, Not Thanked&quot;</value>
        </filters>
        <label>Gifts Needing Thank-Yous</label>
    </listViews>
    <listViews>
        <fullName>Gifts_Needing_Thanks</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Gift</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>&quot;Won, Not Thanked&quot;</value>
        </filters>
        <label>Gifts - Needing Thanks</label>
    </listViews>
    <listViews>
        <fullName>Gifts_Open</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Gift</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Gifts - Open</label>
    </listViews>
    <listViews>
        <fullName>Grants_Closed_Lost</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Grant</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Lost</value>
        </filters>
        <label>Grants - Closed Lost</label>
    </listViews>
    <listViews>
        <fullName>Grants_Closed_Won</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Grant</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </filters>
        <label>Grants - Closed Won</label>
    </listViews>
    <listViews>
        <fullName>Grants_Open</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Grant</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Grants - Open</label>
    </listViews>
    <listViews>
        <fullName>RecurringGifts</fullName>
        <columns>Recurring_Payment_Profile__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Recurring_Payment_Profile__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Recurring Gifts</label>
    </listViews>
    <recordTypes>
        <fullName>Gift</fullName>
        <active>true</active>
        <businessProcess>Gift</businessProcess>
        <label>Gift</label>
    </recordTypes>
    <recordTypes>
        <fullName>Grant</fullName>
        <active>true</active>
        <businessProcess>Grant</businessProcess>
        <label>Grant</label>
    </recordTypes>
    <recordTypes>
        <fullName>Membership</fullName>
        <active>true</active>
        <businessProcess>Gift</businessProcess>
        <label>Membership</label>
    </recordTypes>
    <validationRules>
        <fullName>Must_choose_Organization_or_Primary_Con</fullName>
        <active>true</active>
        <description>User must choose to relate this opportunity to an Organization Name or a Primary Contact, which determines the hard credit attribution, both are not allowed.</description>
        <errorConditionFormula>AND( NOT(ISBLANK( AccountId )),NOT(ISBLANK(  ContactId__c  )) )</errorConditionFormula>
        <errorMessage>You may only set the Organization Name or the Contact Name to receive the hard credit attribution for this opportunity, but not both.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NonDeductible_Amt_not_more_than_Total</fullName>
        <active>true</active>
        <errorConditionFormula>Non_Deductible_Amount__c &gt; Amount</errorConditionFormula>
        <errorMessage>The Non-Deductible Amount cannot be greater than the total Amount of the Opportunity.</errorMessage>
    </validationRules>
</CustomObject>